--- a/system/modules/nodePicker/html/nodePicker.css
+++ b/system/modules/nodePicker/html/nodePicker.css
@@ -4,20 +4,18 @@
   
   #nodePicker_container {
 	position:absolute;
-	width:160px;
-	right:4px;
 	top:5px;
+	right:3px;
   }
   
   #nodePicker_container.version-211 {
+	position:absolute;
 	top:3px;
-	right:2px;
+	right:1px;
   }
   
-  #nodePicker {
-	border:1px solid #D49822;
-	width:160px;
-	background-color:transparent;
+  #nodePicker_chzn {
+	padding-right:4px;
   }
   
   #tl_breadcrumb {
